modules/cli/src/test/resources/good/syntax/consistentchoicesubj/Test02.scr
module good.syntax.consistentchoicesubj.Test02;


// Maybe refactor as projection
global protocol Proto1(role C, role S)
{
	choice at C
	{
		0() from C to S;
		choice at S  // Fixed peekParentEnv index bug for enabled choice subjs
		{
			1() from S to C;
		}
	}
}

