modules/cli/src/test/resources/bad/syntax/consistentchoicesubj/Test02.scr
module bad.syntax.consistentchoicesubj.Test02;


// Maybe refactor as projection
global protocol Proto1(role C, role S)
{
	choice at C
	{
		choice at S  // Fixed peekParentEnv index bug for enabled choice subjs
		{
			1() from S to C;
		}
	}
}

